# simple_search-rs

./: Cargo.toml  README.md
benches/: common_prefix_benchmark.rs  levenshtein_benchmark.rs  search_engine_benchmark.rs
src/: lib.rs  main.rs  search_engine.rs  similarity.rs
src/granular/: mod.rs  search_engine.rs  similarity.rs
src/levenshtein/: base.rs  incremental.rs  mod.rs
src/stateful/: mod.rs  search_engine.rs  similarity.rs  state.rs
src/stateless/: mod.rs  search_engine.rs  similarity.rs
src/type_erasure/: cloneable.rs  mod.rs  non_cloneable.rs
tests/: test_incremental.rs
