[package]
name = "simple_search"
version = "0.1.2"
license = "MIT"
description = "A simple library for searching objects"
homepage = "https://github.com/FlorianNAdam/simple_search-rs"
repository = "https://github.com/FlorianNAdam/simple_search-rs"
readme = "README.md"
edition = "2021"




[features]
rayon = ["dep:rayon"]

[dependencies]
difflib = "0.4.0"
rayon = {version="1.7.0", optional = true}

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "levenshtein_benchmark"
harness = false

[[bench]]
name = "common_prefix_benchmark"
harness = false

[[bench]]
name = "search_engine_benchmark"
harness = false
